# rust_wasm_game

./: Cargo.toml  index.html
src/: lib.rs  map.rs
src/components/: mod.rs  tasks.rs  traits.rs
src/systems/: gathering.rs  map.rs  mod.rs  movement.rs  render.rs
