[package]
name = "game"
version = "0.1.0"
authors = ["Dmajster <domen.rostohar98@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"
uuid = { version = "0.8", features = ["v4"] }
legion = { version = "0.2.4", default-features = false }
web-sys = { version = "0.3.43", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'console',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
] }
