[package]
name = "game"
version = "0.1.0"
authors = ["Dmajster <domen.rostohar98@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"
console_error_panic_hook = "0.1.6"
nalgebra-glm = "0.1"
legion = { git = "https://github.com/TomGillen/legion", branch = "master", default-features = false, features = [
    "stdweb",
    "wasm-bindgen",
    "codegen",
    "serialize"
] }
web-sys = { version = "0.3.43", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'console',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
] }
